--- a/index.html
+++ b/index.html
@@ -491,35 +491,39 @@
                 <div class="top-left__logo">
                     <img src="img/logo_footer.jpg" alt="">
                 </div>
-                <div class="top-left__panels">
-                    <div class="top-left__panel">
-                        <div class="panel__left">
-                            <span class="top-left__news">Подписаться на наши новости</span>
-                            <input type="text" placeholder="mail@examlple.ua">
-                            <button class="top-left__btn-search"></button>
-                        </div>
+
+                <div class="top-left__panel">
+                    <div class="panel__left">
+                        <span class="top-left__news">Подписаться на наши новости</span>
+                        <input type="text" placeholder="mail@examlple.ua">
+                        <button class="top-left__btn-search"></button>
                     </div>
-                    <div class="panel__right">
-                        <span class="top-left__soc">Подписывайтесь на нас в соцсетях</span>
-                        <div class="social">
-                            <div class="top-left__facebook">
-                                <img src="img/inst-footer.jpg" alt="">
-                            </div>
-                            <div class="top-left__insta">
-                                <img src="img/inst-footer.jpg" alt="">
-                            </div>
-                            <div class="top-left__youtube">
-                                <img src="img/youtube-footer.jpg" alt="">
-                            </div>
+                </div>
+                <div class="panel__right">
+                    <span class="top-left__soc">Подписывайтесь на нас в соцсетях</span>
+                    <div class="social">
+                        <div class="top-left__facebook">
+                            <img src="img/face_footer.jpg" alt="">
+                        </div>
+                        <div class="top-left__insta">
+                            <img src="img/inst-footer.jpg" alt="">
+                        </div>
+                        <div class="top-left__youtube">
+                            <img src="img/youtube-footer.jpg" alt="">
                         </div>
                     </div>
                 </div>
+
 
             </div>
-
+            <div class="menu_758">Меню</div>
             <div class="footer__bottom-left">
+
                 <div class="bottom-left__li">
-                    <span class="li__span">О компании</span>
+                    <div class="bottom-left__menu ">
+                        <span class="li__span ">О компании</span>
+                        <span class="li__select _icon-select"></span>
+                    </div>
                     <ul>
                         <li><a href="">Ссылка 1</a></li>
                         <li><a href="">Ссылка 2</a></li>
@@ -527,7 +531,10 @@
                     </ul>
                 </div>
                 <div class="bottom-left__li">
-                    <span class="li__span">Доставка и оплата</span>
+                    <div class="bottom-left__menu ">
+                        <span class="li__span ">Доставка и оплата</span>
+                        <span class="li__select _icon-select"></span>
+                    </div>
                     <ul>
                         <li><a href="">Ссылка 1</a></li>
                         <li><a href="">Ссылка 2</a></li>
@@ -535,7 +542,10 @@
                     </ul>
                 </div>
                 <div class="bottom-left__li">
-                    <span class="li__span">Поддержка</span>
+                    <div class="bottom-left__menu ">
+                        <span class="li__span ">Поддержка</span>
+                        <span class="li__select _icon-select"></span>
+                    </div>
                     <ul>
                         <li><a href="">Ссылка 1</a></li>
                         <li><a href="">Ссылка 2</a></li>
@@ -543,7 +553,10 @@
                     </ul>
                 </div>
                 <div class="bottom-left__li">
-                    <span class="li__span">Контакты</span>
+                    <div class="bottom-left__menu ">
+                        <span class="li__span ">Контакты</span>
+                        <span class="li__select _icon-select"></span>
+                    </div>
                     <ul>
                         <li><a href="">Ссылка 1</a></li>
                         <li><a href="">Ссылка 2</a></li>
@@ -553,7 +566,9 @@
             </div>
 
             <div class="footer__right">
-                <button class="right__btn">Каталог Kidwiser</button>
+                <div class="footer-btn-container">
+                    <button class="right__btn">Каталог Kidwiser</button>
+                </div>
                 <span class="right__span">Правовая информация</span>
                 <ul>
                     <li><a href="">Политика конфиденциальности</a></li>
